--- a/_art/language/en/amiga500.xml
+++ b/_art/language/en/amiga500.xml
@@ -10,7 +10,7 @@
 Personal computer
 Fourth
 1987
-Floppy disk, IDE hard drive
+Floppy, IDE hard drive
 Joystick, mouse, keyboard</text>
 		</text>
 		
