--- a/_art/language/en/amigacdtv.xml
+++ b/_art/language/en/amigacdtv.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Commodore International
-Home video game console
+Video game console
 Fourth
 1991
 CD-Rom
