--- a/_art/language/en/atari2600.xml
+++ b/_art/language/en/atari2600.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Atari
-Home video game console
+Video game console
 Second
 1977
 Cartridge
