--- a/_art/language/en/atarist.xml
+++ b/_art/language/en/atarist.xml
@@ -11,7 +11,7 @@ Personal computer
 Fourth
 1985
 Floppy disk
-Joystick 1bt, keyboard, mouse</text>
+1 button Joystick, keyboard, mouse</text>
 		</text>
 
 		<text name="sys_description" extra="true">
