--- a/_art/language/en/auto-allgames.xml
+++ b/_art/language/en/auto-allgames.xml
@@ -6,7 +6,7 @@
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>This section groups all the games in your collection, any system confused and arranged in alphabetical order. All the usual sorting filters are available to help you quickly find a game. Whether by name, system, creator, rating, number of players or even date added to your collection.
+<text>This section groups all the games in your collection from all systems, organized in alphabetical order by default. All the usual sorting filters are available to help you quickly find a game. Whether by name, system, creator, rating, number of players or even date added to your collection.
 It’s an extremely useful and practical search tool for anyone who knows or doesn’t know by heart his huge collection of games.</text>
 		</text>
 		
