--- a/_art/language/en/c64.xml
+++ b/_art/language/en/c64.xml
@@ -10,7 +10,7 @@
 Personal computer
 Third
 1982
-Cartridge, digital tape, floppy
+Cartridge, tape, floppy
 Joystick, keyboard, mouse</text>
 		</text>
 
