--- a/_art/language/en/daphne.xml
+++ b/_art/language/en/daphne.xml
@@ -6,12 +6,12 @@
 	
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Pioneer, Philips and others
+<text>Pioneer, Philips & Others
 Arcade video game
 Fourth
 1982
 Laser disc
-Arcade stick and others</text>
+Arcade stick, other</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
