--- a/_art/language/en/dos386.xml
+++ b/_art/language/en/dos386.xml
@@ -10,7 +10,7 @@
 Personnal computer
 Third / Fourth
 1982
-Floppy disk 5¼ 3½, hard disk
+5¼ 3½ Floppy, hard disk
 Joystick, keyboard, mouse</text>
 		</text>
 
