--- a/_art/language/en/fds.xml
+++ b/_art/language/en/fds.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo
-Video game console add-on
+Game console add-on
 Third
 1986
 Floppy disks
