--- a/_art/language/en/gba.xml
+++ b/_art/language/en/gba.xml
@@ -11,7 +11,7 @@ Handheld game console
 Sixth
 2001
 Cartridge GBA, GB, GBC
-4 buttons Joypad</text>
+4 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
