--- a/_art/language/en/msx.xml
+++ b/_art/language/en/msx.xml
@@ -10,7 +10,7 @@
 Personnal computer
 Third
 1983 / 1985 / 1988 / 1990
-Cartridge, floppy & tape disk
+Cartridge, floppy, tape
 Joystick, mouse, keyboard</text>
 		</text>
 
