--- a/_art/language/en/n64.xml
+++ b/_art/language/en/n64.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo
-Videoconsola sobremesa
-Quinta
+Video game console
+Fifth
 1996
-Cartucho
-Joypad 10 botones + Joystick</text>
+Cartridge
+10 button Joypad + Joystick</text>
 		</text>
 
 		<text name="sys_description" extra="true">
