--- a/_art/language/en/neogeocd.xml
+++ b/_art/language/en/neogeocd.xml
@@ -7,8 +7,8 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>SNK
-Videoconsola sobremesa
-Cuarta
+Video game console
+Fourth
 1994
 CD-Rom
 Joystick</text>
@@ -16,7 +16,7 @@ Joystick</text>
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Neo-Geo CD is a video game console launched in 1994 in Japan by SNK. It is based on the architecture of the Neo-Geo, and uses CD-ROMs instead of cartridges, with the aim to reduce the price of games. This advantage is also its main drawback, its transfer speed of 150 kio / s (single speed) associated with the small amount of available RAM (56Mo) impose significant loading time during the game. Conversion of game cartridges have been amputated from some graphics and animations to be lighter to load. As a result, the only interest of this system are its few exclusives games or with music remix.</text>
+<text>The Neo-Geo CD is a game console launched in 1994 in Japan by SNK. It is based on the architecture of the Neo-Geo, but uses CD-ROMs instead of cartridges, with the aim to reduce the price of games. This advantage is also its main drawback, its transfer speed of 150 kio / s (single speed) associated with the small amount of RAM (56Mo) imposing longer loading times during the game. Conversion of game cartridges effected  some graphics and animations, decreasing the load. As a result, the main interest of this system are its exclusives games or with music remix.</text>
 		</text>
 		
 	</view>
