--- a/_art/language/en/nes.xml
+++ b/_art/language/en/nes.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo
-Home video game console
+Video game console
 Third
 1983
 Cartridge
-2 button Joypad, Light gun</text>
+2 button Joypad, Zapper</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
