--- a/_art/language/en/pcengine.xml
+++ b/_art/language/en/pcengine.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>NEC Corp., Hudson Soft
-Home video game console
+Video game console
 Fourth
 1987
 HuCard
