--- a/_art/language/en/pcfx.xml
+++ b/_art/language/en/pcfx.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>NEC Corporation
-Home video game console
+Video game console
 Fifth
 1994
 CD-Rom
