--- a/_art/language/en/pokemini.xml
+++ b/_art/language/en/pokemini.xml
@@ -11,7 +11,7 @@ Handheld game console
 Sixth
 2002
 Cartridge
-2 buttons Joypad</text>
+2 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
