--- a/_art/language/en/ports.xml
+++ b/_art/language/en/ports.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Multiple
-Ports & Games engine
+Ports & Game engines
 All
 1999
 Files
