--- a/_art/language/en/psp.xml
+++ b/_art/language/en/psp.xml
@@ -11,7 +11,7 @@ Handheld game console
 Seventh
 2004
 UMD, Memory Stick
-Joypad + Stick & 7 buttons</text>
+7 button Joypad + Joystick</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
