--- a/_art/language/en/sega32x.xml
+++ b/_art/language/en/sega32x.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Sega
-Video game console add-on
+Game console add-on
 Fourth
 1994
 Cartridge, CD-Rom
-Joypad with 3 or 6 button</text>
+3 / 6 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
