--- a/_art/language/en/snes-msu1.xml
+++ b/_art/language/en/snes-msu1.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo, Sony Computer
-Video game console add-on
+Game console add-on
 Fourth
 1991 (Prototype)
 CD-Rom, Cartridge
-6 buttons gamepad, Light gun</text>
+6 button gamepad, Super Scope</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
