--- a/_art/language/en/snes.xml
+++ b/_art/language/en/snes.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo
-Home video game console
+Video game console
 Fourth
 1990
 Cartridge
-6 buttons gamepad, Light gun</text>
+6 button gamepad, Super Scope</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
