--- a/_art/language/en/supergrafx.xml
+++ b/_art/language/en/supergrafx.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>NEC Home Electronics
-Home video game console
+Video game console
 Fourth
 1989
 HuCard
