--- a/_art/language/en/supervision.xml
+++ b/_art/language/en/supervision.xml
@@ -11,7 +11,7 @@ Handheld game console
 Fourth
 1992
 Cartridge
-2 buttons gamepad</text>
+2 button gamepad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
