--- a/_art/language/en/vectrex.xml
+++ b/_art/language/en/vectrex.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Smith Engineering
-Home video game console
+Video game console
 Second
 1982
 Cartridge
-Joystick with 4 buttons</text>
+4 button Joystick</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
