--- a/_art/language/en/virtualboy.xml
+++ b/_art/language/en/virtualboy.xml
@@ -11,7 +11,7 @@ Handheld game console
 Fifth
 1995
 Cartridge
-2 buttons gamepad</text>
+2 button gamepad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
