--- a/_art/language/en/zxspectrum.xml
+++ b/_art/language/en/zxspectrum.xml
@@ -11,7 +11,7 @@ Personnal computer
 Second
 1982
 Cassette, floppy, cart.
-1/2 buttons joystick, keyboard</text>
+1 / 2 button joystick, keyboard</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
