--- a/_art/language/en/3do.xml
+++ b/_art/language/en/3do.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Panasonic, Sanyo, Goldstar
-Home video game console
+Video game console
 Fifth
 1993
 CD-Rom
-Joystick 5 buttons</text>
+5 Button Joystick</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
