--- a/_art/language/en/amiga1200.xml
+++ b/_art/language/en/amiga1200.xml
@@ -10,13 +10,13 @@
 Personal computer
 Fourth
 1992
-Floppy disk, IDE hard drive
+Floppy, IDE hard drive
 Joystick, mouse, keyboard</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Amiga 1200 (A1200) released in 1992 is the fourth-generation computer from Commodore. It incorporates a 68020 processor that is 2 times more powerful clocked at 14 MHz supported by an AGA graphic chipset, 2 MB of RAM as standard, and the sound always on 4-way stereo 8Bit. The normal mode display changes to 256 colors and 262,144 colors in HAM-8 mode from a palette of 16,777,216. Two types of games appear, those simply adapted to use the AGA like Chaos Engine, and those that will get 100% off like the cult Payback, Guardian, Banshee, Alien Breed 3D & Pinball Illusions.</text>
+<text>The Amiga 1200 released in 1992 is a fourth-generation computer from Commodore. It incorporates a 68020 processor that was twice as powerful clocked at 14 MHz. Supported by AGA graphic chipset, 2 MB of RAM was standard, and sound was always 4-way stereo 8Bit. The normal mode display changes to 256 colors and 262,144 colors in HAM-8 mode from a palette of 16,777,216. Two types of games appear, those simply adapted to use the AGA like Chaos Engine, and those that will get 100% potential like the cult Payback, Guardian, Banshee, & Alien Breed 3D.</text>
 		</text>
 		
 	</view>
