--- a/_art/language/en/atari7800.xml
+++ b/_art/language/en/atari7800.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Atari
-Home video game console
+Video game console
 Third
 1986
 Cartridge
