--- a/_art/language/en/atarilynx.xml
+++ b/_art/language/en/atarilynx.xml
@@ -11,7 +11,7 @@ Handheld game console
 Fourth
 1989
 Cartridge
-2 buttons joypad</text>
+2 button joypad</text>
 		</text>
 
 		<text name="sys_description" extra="true">
