--- a/_art/language/en/colecovision.xml
+++ b/_art/language/en/colecovision.xml
@@ -7,7 +7,7 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Coleco Industries
-Home video game console
+Video game console
 Second
 1982
 Cartridge
