--- a/_art/language/en/cplus4.xml
+++ b/_art/language/en/cplus4.xml
@@ -6,17 +6,17 @@
 	
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Mattel
-Video game console
-Second
-1979
-Cartridge
-16 direction pad & 15 buttons</text>
+<text>Commodore International
+Personal computer
+Third
+1984
+Cassette tape, floppy disk
+Joystick, keyboard</text>
 		</text>
-		
+
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Intellivision is a video game console produced by Mattel and released in 1980. It was the first system to be a serious threat to the domination of Atari. It is equipped with an 895 kHz processor, 371 oct of RAM, a 3 voice sound and can display a resolution of 160x196 pixels in 16 colors. It was the first 16-bit game console and the first system in 1981 to use ‘broadband’ with the ‘play cable’ which enabled Intellivision games to be downloaded via cable TV for 24 hours. In 2014 the ‘IntyBASIC’ simplified language was released which revived the Homebrew scene.</text>
+<text>Released in 1984 to replace the VIC-20, the Commodore C116, C16 and Plus / 4 range targeted the entry-level market. A MOS7501 or 8501 processor succeeds the 6502 and is 75% faster. However only one TED co-processor is included for audio and video. Also unlike the C64, no hardware acceleration exists on these machines. The Plus / 4 has 32k of RAM and integrates four office applications into it. This project was a commercial failure in the USA and stopped in 1985 even if copies were sold in Europe and especially in the east, behind the iron curtain.</text>
 		</text>
 		
 	</view>
