--- a/_art/language/en/dos486.xml
+++ b/_art/language/en/dos486.xml
@@ -10,13 +10,13 @@
 Personnal computer
 Fourth / Fifth
 1989
-CD-Rom, hard disk, floppy disk
+CD-Rom, hard disk, floppy
 Joypad, keyboard, mouse</text>
 		</text>
 
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>We call DOS (disk operating system) the command line operating system on PC developed by Microsoft. The Intel i486 launched in 1989 will allow execution from 24 to 80 MHz, the games are then in VGA 640x480 16 colors or 320x200 256 colors. New explosion from 1993 with the Pentium family, the games are then in SVGA 640x480 256 colors or 1024x768 16 colors. Coupled with ever more RAM, new 2D video cards, then 3D accelerator cards, DOS will finally give way to Windows 98 on the biggest 2D & 3D games of the time.</text>
+<text>DOS (disk operating system) is the command line operating system on PC developed by Microsoft. The Intel i486 launched in 1989 offers executions from 24 to 80 MHz, and games in VGA 640x480 16 colors or 320x200 256 colors. New advances 1993 with the Pentium family, allowed SVGA 640x480 256 colors or 1024x768 16 colors. Coupled with ever more RAM, new 2D video cards, and 3D accelerator cards, DOS eventually paved the way to Windows 98.</text>
 		</text>
 		
 	</view>
