--- a/_art/language/en/fbneo.xml
+++ b/_art/language/en/fbneo.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Multiple
-Arcade video game cabinet
+Arcade game cabinet
 Multiple
-1971 / 20xx
+1971 / 2003-
 PCB Card
-Arcade stick and other</text>
+Arcade stick, other</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
