--- a/_art/language/en/gb.xml
+++ b/_art/language/en/gb.xml
@@ -11,7 +11,7 @@ Handheld console
 Fourth
 1989
 Cartridge
-2 buttons Joypad</text>
+2 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
