--- a/_art/language/en/gbc.xml
+++ b/_art/language/en/gbc.xml
@@ -11,12 +11,12 @@ Handheld game console
 Fifth
 1998
 Cartridge GBC, GB
-2 buttons Joypad</text>
+2 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Game Boy Color created in 1989 by Nintendo is the portable console succeeding the Game Boy. It incorporates a color screen barely larger than that of the Game Boy, but has an 8 Mhz processor, 32 KB of RAM, 16 KB of video memory and displays a resolution of 160x144 pixels in 56 colors. It is backwards compatible with all first generation Game Boy games and has 10 hours of battery life. It will be available in 6 different colors at launch: purple, green, pink, blue, yellow and light purple. But also in limited editions like black, translucent, gold, Pokémon ...</text>
+<text>The Game Boy Color created in 1989 by Nintendo is the portable console succeeding the Game Boy. It incorporates a color screen barely larger than that of the Game Boy, but has an 8 Mhz processor, 32 KB of RAM, 16 KB of video memory and displays a resolution of 160x144 pixels in 56 colors. It is backwards compatible with all first generation Game Boy games and has 10 hours of battery life. It was available in 6 different colors at launch: purple, green, pink, blue, yellow and light purple. But also in limited editions like black, translucent, gold, Pokémon ...</text>
 		</text>
 		
 	</view>
