--- a/_art/language/en/gx4000.xml
+++ b/_art/language/en/gx4000.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Amstrad
-Home video game console
+Video game console
 Third
 1990
 Cartridge
-2 buttons joypad</text>
+2 button joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
