--- a/_art/language/en/mame.xml
+++ b/_art/language/en/mame.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Many
-Arcade video game cabinet
-1971 / 20xx
+Arcade game cabinet
+1971 / 2003-
 2003
 PCB Jamma, CD-Rom
-Arcade stick and other</text>
+Arcade stick, other</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
