--- a/_art/language/en/megadrive.xml
+++ b/_art/language/en/megadrive.xml
@@ -7,16 +7,16 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Sega
-Home video game console
+Video game console
 Fourth
 1988
 Cartridge
-Gamepad 3 or 6 buttons</text>
+3 / 6 Button Gamepad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>Released in 1988, the Megadrive or Genesis in America, is the new Sega console based on the architecture of their Arcade System 16. Taking short Nintendo 16-bit market, Sega manages to position it in the United States and Europe, sweeping the way the PC Engine. It has a 7.6 MHz processor, 74 KB of RAM, a 320x224 display and 256x224 pixels in 64 colors among 512 and FM stereo sound. In 1991 the mascot of the brand Sonic the Hedgehog is released, followed by two excellent suites. But the Megadrive is also Disney Aladdin, EA sports games and the uncensored version of Mortal Kombat!</text>
+<text>Released in 1988, the Megadrive or Genesis in America, is a Sega console based on the architecture of their Arcade System 16. Taking shot at Nintendo 16-bit market, Sega managed to position itself in the United States and Europe, sweeping the way to the PC Engine. It has a 7.6 MHz processor, 74 KB of RAM, a 320x224 display, and FM stereo sound. In 1991 the mascot of the brand Sonic the Hedgehog was released, followed by two excellent sequels. The Megadrive is also known for Disney Aladdin, EA sports games, and the uncensored version of Mortal Kombat!</text>
 		</text>
 		
 	</view>
