--- a/_art/language/en/msxturbor.xml
+++ b/_art/language/en/msxturbor.xml
@@ -6,17 +6,17 @@
 	
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Mattel
-Video game console
-Second
-1979
-Cartridge
-16 direction pad & 15 buttons</text>
+<text>Microsoft, Panasonic, Sony
+Personnal computer
+Third
+1990
+Cartridge, floppy disk
+Joystick, keyboard, mouse</text>
 		</text>
-		
+
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Intellivision is a video game console produced by Mattel and released in 1980. It was the first system to be a serious threat to the domination of Atari. It is equipped with an 895 kHz processor, 371 oct of RAM, a 3 voice sound and can display a resolution of 160x196 pixels in 16 colors. It was the first 16-bit game console and the first system in 1981 to use ‘broadband’ with the ‘play cable’ which enabled Intellivision games to be downloaded via cable TV for 24 hours. In 2014 the ‘IntyBASIC’ simplified language was released which revived the Homebrew scene.</text>
+<text>The MSX Turbo R is the last generation of MSX put on the market in 1990 to compensate for the cancellation of the MSX3. Only Panasonic has marketed its FS-A1ST and FS-A1GT models in Japan. With a 16-bit RISC processor and upgraded R800 CPU, it is the fastest of the entire MSX series.</text>
 		</text>
 		
 	</view>
