--- a/_art/language/en/n64dd.xml
+++ b/_art/language/en/n64dd.xml
@@ -6,17 +6,17 @@
 	
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Mattel
-Video game console
-Second
-1979
-Cartridge
-16 direction pad & 15 buttons</text>
+<text>Nintendo
+Video Game Console
+Fifth
+1999
+Magnetic Disk
+10 button Joypad + Joystick</text>
 		</text>
-		
+
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Intellivision is a video game console produced by Mattel and released in 1980. It was the first system to be a serious threat to the domination of Atari. It is equipped with an 895 kHz processor, 371 oct of RAM, a 3 voice sound and can display a resolution of 160x196 pixels in 16 colors. It was the first 16-bit game console and the first system in 1981 to use ‘broadband’ with the ‘play cable’ which enabled Intellivision games to be downloaded via cable TV for 24 hours. In 2014 the ‘IntyBASIC’ simplified language was released which revived the Homebrew scene.</text>
+<text>The 64DD is a video game console peripheral which plugs into the extension port on the underside of the Nintendo 64 console. It was originally announced in 1996, but due to delays was released in Japan only during 1999. It uses a proprietary magnetic disk format and could connect to a dedicated online service named Randnet to share media along with a few other services.</text>
 		</text>
 		
 	</view>
