--- a/_art/language/en/nds.xml
+++ b/_art/language/en/nds.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Nintendo
-Consola portatil
-Septima
+Handheld game console
+Seventh
 2004
-Cartucho DS, GBA
-Joypad 6 botomes</text>
+DS Cartridge, GBA
+6 button Joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
