--- a/_art/language/en/ngp.xml
+++ b/_art/language/en/ngp.xml
@@ -11,7 +11,7 @@ Handheld game console
 Fifth
 1998
 Cartridge
-2 buttons joypad</text>
+2 button joypad</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
