--- a/_art/language/en/satellaview.xml
+++ b/_art/language/en/satellaview.xml
@@ -3,22 +3,22 @@
 	<formatVersion>7</formatVersion>
 
 	<view name="system">
-	
+		
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Mattel
-Video game console
-Second
-1979
-Cartridge
-16 direction pad & 15 buttons</text>
+<text>Nintendo
+Game console add-on
+Fourth
+1995
+Cartridge, Downloadable
+6 button gamepad, Super Scope</text>
 		</text>
-		
+
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Intellivision is a video game console produced by Mattel and released in 1980. It was the first system to be a serious threat to the domination of Atari. It is equipped with an 895 kHz processor, 371 oct of RAM, a 3 voice sound and can display a resolution of 160x196 pixels in 16 colors. It was the first 16-bit game console and the first system in 1981 to use ‘broadband’ with the ‘play cable’ which enabled Intellivision games to be downloaded via cable TV for 24 hours. In 2014 the ‘IntyBASIC’ simplified language was released which revived the Homebrew scene.</text>
+<text>The Satellaview, or BS-X, was released in 1995 in Japan to download exclusive satellite games on the St.GIGA network. It was sold as an additional peripheral device for the Super Famicom and was plugged in to the modem port. This early broadcast service is alleged to have gathered 100,000 monthly users before eventually shutting down. There were many unique games not available on any other systems of the time.</text>
 		</text>
 		
 	</view>
-
+	
 </theme>
