--- a/_art/language/en/sg-1000.xml
+++ b/_art/language/en/sg-1000.xml
@@ -7,11 +7,11 @@
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
 <text>Sega
-Home video game console
+Video game console
 Third
 1983
 Cartridge, tape, Sega card
-2 buttons joystick</text>
+2 button joystick</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
