--- a/_art/language/en/sufami.xml
+++ b/_art/language/en/sufami.xml
@@ -3,22 +3,22 @@
 	<formatVersion>7</formatVersion>
 
 	<view name="system">
-	
+		
 		<text name="sys_info" extra="true">
 <!-- MAX SIZE -----------|------>
-<text>Mattel
-Video game console
-Second
-1979
+<text>Bandai, Nintendo
+Game console add-on
+Fifth
+1996
 Cartridge
-16 direction pad & 15 buttons</text>
+6 button gamepad, Super Scope</text>
 		</text>
 		
 		<text name="sys_description" extra="true">
 <!-- MAX SIZE - DEPENDS OF THE WORDS LENGTH ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------->
-<text>The Intellivision is a video game console produced by Mattel and released in 1980. It was the first system to be a serious threat to the domination of Atari. It is equipped with an 895 kHz processor, 371 oct of RAM, a 3 voice sound and can display a resolution of 160x196 pixels in 16 colors. It was the first 16-bit game console and the first system in 1981 to use ‘broadband’ with the ‘play cable’ which enabled Intellivision games to be downloaded via cable TV for 24 hours. In 2014 the ‘IntyBASIC’ simplified language was released which revived the Homebrew scene.</text>
+<text>The Sufami Turbo is an accessory for the Super Famicom. It consists of a cartridge shaped device that allows for the use of 1-2 smaller cartridges that are inserted into the top. It is often compared to the similiar Alladin Disk Enhancer device, with one major difference being that Bandai received official manufacturing and publishing rights from Nintendo.</text>
 		</text>
 		
 	</view>
-
+	
 </theme>
